--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -60,95 +60,29 @@ jobs:
   spell-check:
     name: Check spelling
     needs: yaml-check
-    runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
-    container:
-      image: jhudsl/course_template:main
+    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
+    with:
+      check_type: "spelling"
+      error_min: 3
 
-    steps:
-      - name: Checkout files
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+  url-check:
+    name: Check URLs
+    needs: yaml-check
+    if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
+    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
+    with:
+      check_type: "urls"
+      error_min: 0
 
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git fetch --all
-          git checkout $branch_name
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-        shell: bash
-
-      - name: Run spell check
-        id: spell_check_run
-        run: |
-          results=$(Rscript "scripts/spell-check.R")
-          echo "::set-output name=sp_chk_results::$results"
-
-      - name: Archive spelling errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results > 0 }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: spell-check-results
-          path: resources/spell_check_results.tsv
-
-      - name: Commit spell check errors
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git add --force resources/spell_check_results.tsv || echo "No changes to commit"
-          git commit -m 'Add spell check file' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
-          git push --force origin $branch_name || echo "No changes to commit"
-
-      - name: Build components of the spell check comment
-        id: build-components
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          sp_error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/spell_check_results.tsv
-          echo ::set-output name=time::$(date +'%Y-%m-%d')
-          echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=sp_error_url::$sp_error_url
-
-      # Handle the commenting
-      - name: Find Comment
-        uses: peter-evans/find-comment@v1
-        id: fc
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: spelling errors
-
-      - name: Spelling errors!
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            :warning: There are spelling errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
-            [Download the errors here.](${{ steps.build-components.outputs.sp_error_url }})
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
-
-      - name: Check spell check results - fail if too many errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
-        run: exit 1
-
-      - name: No spelling errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results < 3 }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            No spelling errors! :tada:
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
+  quiz-check:
+    name: Check quiz formatting
+    if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
+    needs: yaml-check
+    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
+    with:
+      check_type: "quiz_format"
+      error_min: 0
 
   style-code:
     name: Style code
@@ -172,205 +106,6 @@ jobs:
           git add \*.Rmd
           git commit -m 'Style Rmds' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
-
-  url-check:
-    name: Check URLs
-    needs: yaml-check
-    runs-on: ubuntu-latest
-    if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-    container:
-      image: jhudsl/course_template:main
-
-    steps:
-    - name: checkout repo
-      uses: actions/checkout@v2
-
-    - name: Configure git
-      run: |
-        git config --local user.email "itcrtrainingnetwork@gmail.com"
-        git config --local user.name "jhudsl-robot"
-
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        git fetch --all
-        git checkout $branch_name
-        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-      shell: bash
-
-    - name: URLs checker
-      uses: urlstechie/urlchecker-action@master
-      with:
-        # Specify a branch
-        branch: preview-${{ github.event.pull_request.number }}
-
-        # Cleanup
-        cleanup: false
-
-        # A comma-separated list of file types to cover in the URL checks
-        file_types: .Rmd,.md
-
-        # Choose whether to include file with no URLs in the prints.
-        print_all: false
-
-        exclude_files: .github/PULL_REQUEST_TEMPLATE.md, docs/*
-
-        # A comma separated links to exclude during URL checks
-        exclude_urls: https://jhudatascience.org/{Course_Name}}
-
-        force_pass: true
-
-        # A path to a csv file to save results to
-        save: resources/url_checks.csv
-
-    - name: Count URL errors
-      id: url_errors
-      run: |
-        results=$(Rscript "scripts/url-check.R")
-        echo "::set-output name=url_results::$results"
-
-    - name: Commit URL check
-      run: |
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        git add --force resources/url_checks.csv || echo "No changes to commit"
-        git commit -m 'Add URL check file' || echo "No changes to commit"
-        git fetch
-        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-        git push --force origin $branch_name || echo "No changes to commit"
-
-    - name: Build components of the spell check comment
-      id: build-components
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
-      run: |
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        url_errors=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/url_checks.csv
-        echo ::set-output name=time::$(date +'%Y-%m-%d')
-        echo ::set-output name=commit_id::$GITHUB_SHA
-        echo ::set-output name=url_errors::$url_errors
-
-    # Handle the commenting
-    - name: Find Comment
-      uses: peter-evans/find-comment@v1
-      id: fc
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        comment-author: 'github-actions[bot]'
-        body-includes: broken URLs
-
-    - name: URL errors!
-      if: ${{ steps.url_errors.outputs.url_results > 0 }}
-      uses: peter-evans/create-or-update-comment@v1
-      with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          :warning: There are broken URLs that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/How-to-set-up-and-customize-GitHub-actions-robots#check-for-broken-urls).
-          [Download the errors here.](${{ steps.build-components.outputs.url_errors }})
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
-
-    - name: Check URL results - fail if too many errors
-      if: ${{ steps.url_errors.outputs.url_results > 0 }}
-      run: exit 1
-
-    - name: No URL errors
-      if: ${{ steps.url_errors.outputs.url_results == 0 }}
-      uses: peter-evans/create-or-update-comment@v1
-      with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          No broken URLs detected! :tada:
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
-
-  check-quizzes:
-    name: Check Leanpub quizzes
-    needs: yaml-check
-    runs-on: ubuntu-latest
-    container:
-      image: jhudsl/course_template:main
-    if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
-    steps:
-      - name: Checkout files
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git fetch --all
-          git checkout $branch_name
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-        shell: bash
-
-      - name: Run quiz check
-        id: quiz_check_run
-        run: |
-          Rscript -e "ottrpal::check_quizzes(quiz_dir = 'quizzes', write_report = TRUE, verbose = TRUE)"
-          results=0
-          if [ -f question_error_report.tsv ]; then
-            results=$(wc -l < question_error_report.tsv >/dev/null)
-          fi
-          echo ::set-output name=quiz_chk_results::$results
-
-      - name: Commit quiz check errors
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git add --force question_error_report.tsv || echo "No changes to commit"
-          git commit -m 'Add question error report file' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
-          git push origin $branch_name || echo "No changes to commit"
-
-      - name: Build components of the quiz check comment
-        id: build-components
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          quiz_error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/question_error_report.tsv
-          echo ::set-output name=time::$(date +'%Y-%m-%d')
-          echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=quiz_error_url::$quiz_error_url
-
-      # Handle the commenting
-      - name: Find Comment
-        uses: peter-evans/find-comment@v1
-        id: fc
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: quiz errors
-
-      - name: Quiz errors!
-        if: ${{ steps.quiz_check_run.outputs.quiz_chk_results >= 2 }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            :warning: There are quiz errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Publishing-on-Leanpub#setting-up-quizzes).
-            [Download the errors here.](${{ steps.build-components.outputs.quiz_error_url }})
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
-
-      - name: Check quiz check results - fail if too many errors
-        if: ${{ steps.quiz_check_run.outputs.quiz_chk_results >= 2 }}
-        run: exit 1
-
-      - name: No quiz errors
-        if: ${{ steps.quiz_check_run.outputs.quiz_chk_results < 2 }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            No quiz errors detected! :tada:
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
 
   render-preview:
     name: Render preview
