--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -71,14 +71,16 @@ jobs:
       - name: Count URL errors
         if: ${{ inputs.check_type == 'urls' }}
         run: |
-          echo "chk_results=$(Rscript scripts/url-check.R)" >> $GITHUB_ENV
-          echo "chk_results=$((chk_results-1))" >> $GITHUB_ENV
+          chk_results=$(Rscript scripts/url-check.R)"
+          chk_results="$((chk_results-1))"
+          echo "chk_results=$chk_results" >> $GITHUB_ENV
 
       - name: Run spelling check
         if: ${{ inputs.check_type == 'spelling' }}
         run: |
-          echo "chk_results=$(Rscript scripts/spell-check.R)" >> $GITHUB_ENV
-          echo "chk_results=$((chk_results-1))" >> $GITHUB_ENV
+          chk_results=$(Rscript scripts/spell-check.R)
+          chk_results="$((chk_results-1))"
+          echo "chk_results=$chk_results" >> $GITHUB_ENV
 
       - name: Run quiz check
         if: ${{ inputs.check_type == 'quiz_format' }}
@@ -86,9 +88,10 @@ jobs:
           Rscript -e "ottrpal::check_quizzes(quiz_dir = 'quizzes', write_report = TRUE, verbose = TRUE)"
           results=0
           if [ -f question_error_report.tsv ]; then
-            results=$(wc -l < question_error_report.tsv >/dev/null)
+            chk_results=$(wc -l < question_error_report.tsv >/dev/null)
           fi
-          echo "chk_results=$((chk_results-1))" >> $GITHUB_ENV
+          chk_results="$((chk_results-1))"
+          echo "chk_results=$chk_results" >> $GITHUB_ENV
 
 ############################# Handle commenting ################################
 
