--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -57,11 +57,12 @@ jobs:
 
       - name: URLs checker
         if: ${{ inputs.check_type == 'urls' }}
-        uses: urlstechie/urlchecker-action@0.2.2
+        uses: urlstechie/urlchecker-action@0.2.3
         with:
           branch: preview-${{ github.event.pull_request.number }}
           cleanup: false
           print_all: false
+          force_pass: true
           exclude_urls: https://jhudatascience.org/{Course_Name}}
           save: resources/url_checks.csv
 
