--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -14,6 +14,7 @@ on:
       gh_pat:
         type: string
         required: true
+        
 jobs:
   error-check:
     runs-on: ubuntu-latest
@@ -21,87 +22,61 @@ jobs:
       image: jhudsl/course_template:main
 
     steps:
-      - name: Checkout files
-        uses: actions/checkout@v2
-        with:
-          repository: ${{inputs.github_path}}
-          fetch-depth: 0
-          token:
+    - name: Run the check
+      uses: jhudsl/ottr-reports@main
+      id: check_results
+      with:
+        check_type: ${{ inputs.check_type }}
+        error_min: ${{ inputs.error_min }}
 
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ${{ steps.check_results.outputs.error_name }}
+        path: ${{ steps.check_results.outputs.report_path }}
 
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git fetch --all
-          git checkout $branch_name
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-        shell: bash
+############################# Handle commenting ################################
 
-###################### Run the appropriate test ################################
+    - name: Build components of the spell check comment
+      id: build-components
+      run: |
+        echo ::set-output name=time::$(date +'%Y-%m-%d')
+        echo ::set-output name=commit_id::$inputs.commit_id
+        echo ::set-output name=error_url::$error_url
+      shell: bash
 
-      - name: Run check
-        uses: jhudsl/ottr-reports@main
-        id: check_results
-        with:
-          check_type: ${{inputs.check_type}}
-          error_min: ${{inputs.error_min}}
+    - name: Find Comment
+      uses: peter-evans/find-comment@v1
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: ${{ steps.check_results.outputs.error_name }}
 
-########################## Handle commenting ###################################
+    - name: There are errors!
+      if: ${{ steps.check_results.outputs.error_num >= inputs.error_min }}
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          :warning: ${{ steps.check_results.outputs.error_name }} :warning:
+          There are ${{ steps.check_results.outputs.error_name }} that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Most-common-errors-and-pitfalls#spell-checkurl-checkquiz-format-fail).
+          [Download the errors here.](${{ steps.build-components.outputs.error_url }})
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
 
-      - name: Commit check errors
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git add --force ${{ steps.declare.outputs.report_path }} || echo "No changes to commit"
-          git commit -m 'Add ${{ steps.declare.outputs.error_name }} check file' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
-          git push --force origin $branch_name || echo "No changes to commit"
+    - name: Check check results - fail if too many errors
+      if: ${{ steps.check_results.outputs.error_num >= inputs.error_min }}
+      run: exit 1
+      shell: bash
 
-      - name: Build components of the spell check comment
-        id: build-components
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/${{ steps.declare.outputs.report_path }}
-          echo ::set-output name=time::$(date +'%Y-%m-%d')
-          echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=error_url::$error_url
-
-      # Handle the commenting
-      - name: Find Comment
-        uses: peter-evans/find-comment@v1
-        id: fc
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: ${{ steps.declare.outputs.error_name }}
-
-      - name: There are errors!
-        if: ${{ env.chk_results >= env.error_min }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            :warning: ${{ steps.declare.outputs.error_name }} :warning:
-            There are ${{ steps.declare.outputs.error_name }} that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
-            [Download the errors here.](${{ steps.build-components.outputs.error_url }})
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
-
-      - name: Check check results - fail if too many errors
-        if: ${{ env.chk_results >= env.error_min }}
-        run: exit 1
-
-      - name: No errors
-        if: ${{ env.chk_results < env.error_min }}
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            No ${{ steps.declare.outputs.error_name }}! :tada:
-            _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-          edit-mode: replace
+    - name: No errors
+      if: ${{ steps.check_results.outputs.error_num < inputs.error_min }}
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          No ${{ steps.check_results.outputs.error_name }}! :tada:
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
