--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,6 +45,7 @@ jobs:
           else
             echo branch does exist
           fi
+          echo ${{ secrets.GH_PAT }}
         shell: bash
 
     outputs:
@@ -66,6 +67,7 @@ jobs:
     with:
       check_type: spelling
       error_min: 3
+      #gh_pat: ${{ secrets.GH_PAT }}
 
   url-check:
     name: Check URLs
@@ -75,6 +77,7 @@ jobs:
     with:
       check_type: urls
       error_min: 0
+      #gh_pat: ${{ secrets.GH_PAT }}
 
   quiz-check:
     name: Check quiz formatting
@@ -84,6 +87,7 @@ jobs:
     with:
       check_type: quiz_format
       error_min: 0
+      #gh_pat: ${{ secrets.GH_PAT }}
 
 ############################# Style the code ###################################
   style-code:
