--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,7 +45,6 @@ jobs:
           else
             echo branch does exist
           fi
-          echo ${{ secrets.GH_PAT }}
         shell: bash
 
     outputs:
@@ -59,35 +58,35 @@ jobs:
       dockerfiles_changed: steps.verify-changed-files.outputs.files_changed
 
 ########################## Make the error reports ##############################
-  # spell-check:
-  #   name: Check spelling
-  #   needs: yaml-check
-  #   if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
-  #   uses: ./.github/workflows/report-maker.yml
-  #   with:
-  #     check_type: spelling
-  #     error_min: 3
-  #     #gh_pat: ${{ secrets.GH_PAT }}
-  #
-  # url-check:
-  #   name: Check URLs
-  #   needs: yaml-check
-  #   if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-  #   uses: ./.github/workflows/report-maker.yml
-  #   with:
-  #     check_type: urls
-  #     error_min: 0
-  #     #gh_pat: ${{ secrets.GH_PAT }}
-  #
-  # quiz-check:
-  #   name: Check quiz formatting
-  #   if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
-  #   needs: yaml-check
-  #   uses: ./.github/workflows/report-maker.yml
-  #   with:
-  #     check_type: quiz_format
-  #     error_min: 0
-  #     #gh_pat: ${{ secrets.GH_PAT }}
+  spell-check:
+    name: Check spelling
+    needs: yaml-check
+    if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
+    uses: ./.github/workflows/report-maker.yml
+    with:
+      check_type: spelling
+      error_min: 3
+      gh_pat: ${{ secrets.GH_PAT }}
+
+  url-check:
+    name: Check URLs
+    needs: yaml-check
+    if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
+    uses: ./.github/workflows/report-maker.yml
+    with:
+      check_type: urls
+      error_min: 0
+      gh_pat: ${{ secrets.GH_PAT }}
+
+  quiz-check:
+    name: Check quiz formatting
+    if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
+    needs: yaml-check
+    uses: ./.github/workflows/report-maker.yml
+    with:
+      check_type: quiz_format
+      error_min: 0
+      gh_pat: ${{ secrets.GH_PAT }}
 
 ############################# Style the code ###################################
   style-code:
