--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -63,30 +63,36 @@ jobs:
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
     uses: ./.github/workflows/report-maker.yml
+    env:
+      TOKEN: ${{ secrets.GH_PAT }}
     with:
       check_type: spelling
       error_min: 3
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: $TOKEN
 
   url-check:
     name: Check URLs
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
     uses: ./.github/workflows/report-maker.yml
+    env:
+      TOKEN: ${{ secrets.GH_PAT }}
     with:
       check_type: urls
       error_min: 0
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: $TOKEN
 
   quiz-check:
     name: Check quiz formatting
     if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
     needs: yaml-check
     uses: ./.github/workflows/report-maker.yml
+    env:
+      TOKEN: ${{ secrets.GH_PAT }}
     with:
       check_type: quiz_format
       error_min: 0
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: $TOKEN
 
 ############################# Style the code ###################################
   style-code:
